full-moon/tests/cases/fail/parser/if-6/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/if-6
---
error[ast]: expected `end` to conclude `if`
  ┌─ source.lua:2:6
  │
2 │ else then
  │      ^^^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:6
  │
2 │ else then
  │      ^^^^


